--- a/paper/circuits.bib
+++ b/paper/circuits.bib
@@ -38,7 +38,7 @@
                David Narv{\'{a}}ez},
   editor    = {Nicolas Peltier and
                Viorica Sofronie{-}Stokkermans},
-  title     = {The Resolution of Keller's Conjecture},
+  title     = {The Resolution of {K}eller's Conjecture},
   booktitle = {Automated Reasoning - 10th International Joint Conference, {IJCAR}
                2020, Paris, France, July 1-4, 2020, Proceedings, Part {I}},
   series    = {Lecture Notes in Computer Science},
@@ -70,12 +70,24 @@
 
 @article{Lup59,
 annote = {In Russian.},
-author = {Lupanov, O},
+author = {Lupanov, Oleg},
 journal = {Izvestiya VUZov, Radiofizika},
 pages = {120--140},
 title = {{A method of circuit synthesis}},
 volume = {1},
 year = {1959}
+}
+
+@article{Sergeev2020,
+annote = {In Russian},
+author = {Sergeev, Igor},
+doi = {10.4213/dm1547},
+journal = {Diskretnaya Matematika},
+pages = {81--109},
+title = {On monotone circuit complexity of threshold Boolean functions},
+volume = {32},
+issue = {1},
+year = {2020},
 }
 
 @article{M56,
