--- a/paper/defs.tex
+++ b/paper/defs.tex
@@ -29,6 +29,7 @@
 %%%%% MACROS
 \DeclareMathOperator{\SUM}{SUM}
 \DeclareMathOperator{\MOD}{MOD}
+\DeclareMathOperator{\THR}{THR}
 \DeclareMathOperator{\size}{size}
 \DeclareMathOperator{\gates}{gates}
 \DeclareMathOperator{\IN}{IN}
