--- a/paper/main_lipics.tex
+++ b/paper/main_lipics.tex
@@ -39,6 +39,11 @@
 %\supplement{}%optional, e.g. related research data, source code, ... hosted on a repository like zenodo, figshare, GitHub, ...
 %\supplementdetails[linktext={opt. text shown instead of the URL}, cite=DBLP:books/mk/GrayR93, subcategory={Description, Subcategory}, swhid={Software Heritage Identifier}]{General Classification (e.g. Software, Dataset, Model, ...)}{URL to related version} %linktext, cite, and subcategory are optional
 
+
+\supplement{Source code:}%optional, e.g. related research data, source code, ... hosted on a repository like zenodo, figshare, GitHub, ...
+\supplementdetails[linktext={GitHub}]{repository}{https://github.com/alexanderskulikov/circuit_improvement} %linktext, cite, and subcategory are optional
+
+
 %\funding{(Optional) general funding statement \dots}%optional, to capture a funding statement, which applies to all authors. Please enter author specific funding statements as fifth argument of the \author macro.
 
 %\acknowledgements{I want to thank \dots}%optional
