--- a/paper/circuits.bib
+++ b/paper/circuits.bib
@@ -276,3 +276,9 @@ year = {2020},
   howpublished = "\url{https://github.com/alexanderskulikov/circuit_improvement}",
   key="circuit"
 }
+
+@misc{pygraphviz,
+  howpublished = "\url{https://pygraphviz.github.io/}",
+  key="pyg"
+}
+
